; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_expr.c_sqlite3ExprAnalyzeAggList.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_expr.c_sqlite3ExprAnalyzeAggList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.ExprList_item* }
%struct.ExprList_item = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sqlite3ExprAnalyzeAggList(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.ExprList_item*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = icmp ne %struct.TYPE_3__* %7, null
  br i1 %8, label %9, label %31

9:                                                ; preds = %2
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load %struct.ExprList_item*, %struct.ExprList_item** %11, align 8
  store %struct.ExprList_item* %12, %struct.ExprList_item** %5, align 8
  store i32 0, i32* %6, align 4
  br label %13

13:                                               ; preds = %25, %9
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp slt i32 %14, %17
  br i1 %18, label %19, label %30

19:                                               ; preds = %13
  %20 = load i32*, i32** %3, align 8
  %21 = load %struct.ExprList_item*, %struct.ExprList_item** %5, align 8
  %22 = getelementptr inbounds %struct.ExprList_item, %struct.ExprList_item* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @sqlite3ExprAnalyzeAggregates(i32* %20, i32 %23)
  br label %25

25:                                               ; preds = %19
  %26 = load i32, i32* %6, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %6, align 4
  %28 = load %struct.ExprList_item*, %struct.ExprList_item** %5, align 8
  %29 = getelementptr inbounds %struct.ExprList_item, %struct.ExprList_item* %28, i32 1
  store %struct.ExprList_item* %29, %struct.ExprList_item** %5, align 8
  br label %13

30:                                               ; preds = %13
  br label %31

31:                                               ; preds = %30, %2
  ret void
}

declare dso_local i32 @sqlite3ExprAnalyzeAggregates(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
